--- a/spaceshooter.html
+++ b/spaceshooter.html
@@ -675,8 +675,8 @@ function increaseDifficulty() {
   wave++;
 
   // Smooth difficulty curve
-  enemyBaseSpeed = Math.min(0.3 + Math.pow(wave, 0.25) * 0.1, maxEnemySpeed);
-  enemyBulletSpeed = Math.min(2 + Math.pow(wave, 0.25) * 0.02, 3); // faster bullets gradually
+  enemyBaseSpeed = Math.min(0.8 + Math.pow(wave, 0.25) * 0.2, maxEnemySpeed);
+  enemyBulletSpeed = Math.min(2 + Math.pow(wave, 0.25) * 0.02, 3);
   enemyShootChance = Math.min(0.0001 + Math.pow(wave, 0.3) * 0.0001, maxShootChance); // extremely slow growth
 
   spawnWave();
