--- a/spaceshooter.html
+++ b/spaceshooter.html
@@ -349,7 +349,8 @@ function spawnWave(){
         speedY: enemyBaseSpeed,
         phase: Math.random()*Math.PI*2,
         amplitude: 20 + Math.random()*15,
-        frequency: 0.02 + Math.random()*0.02
+        frequency: 0.02 + Math.random()*0.02,
+isChaser: Math.random() < 0.2
       });
     }
   }
@@ -586,6 +587,10 @@ function drawEnemies(){
 
     if(e.blinkCounter === undefined) e.blinkCounter = Math.floor(Math.random()*60);
     if(e.mouthSymbolCounter === undefined) e.mouthSymbolCounter = 0;
+
+if (e.isChaser) {
+    e.color = "#330033"; 
+}
     
     if(!e.color){
 
@@ -785,6 +790,7 @@ if (!isBlinking) {
     ctx.stroke();
   });
 }
+
 function drawHeart(x, y, size) {
   // Draw black border (smaller)
   ctx.fillStyle = "#000";
@@ -937,8 +943,25 @@ function drawUI() {
 function moveEnemies(){
   enemies.forEach(e=>{
     if(!e.alive) return;
-    e.y += e.speedY;
-    e.x = e.baseX + Math.sin(e.phase + e.y*e.frequency) * e.amplitude;
+
+    if (e.isChaser) {
+   
+      const dx = ship.x - e.x;
+      const dy = ship.y - e.y;
+      const distance = Math.hypot(dx, dy);
+
+      if (distance > 1) {
+  
+        const speed = enemyBaseSpeed + 0.5; 
+        e.x += (dx / distance) * speed;
+        e.y += (dy / distance) * speed;
+      }
+    } else {
+      
+      e.y += e.speedY;
+      e.x = e.baseX + Math.sin(e.phase + e.y*e.frequency) * e.amplitude;
+    }
+
     if(e.y > canvas.height + 20) e.alive = false;
   });
 }
